reutilizando codigo y pagina de consulta

--- a/Franquisia1.1/Franquisia1.1.csproj
+++ b/Franquisia1.1/Franquisia1.1.csproj
@@ -445,6 +445,7 @@
     <Content Include="Views\Error\ErrorBD.cshtml" />
     <Content Include="Views\Error\ErrorPermiso.cshtml" />
     <Content Include="Views\UndAtencion\Index.cshtml" />
+    <Content Include="Views\Home\Consulta.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
