--- a/Franquisia1.1/Franquisia1.1.csproj
+++ b/Franquisia1.1/Franquisia1.1.csproj
@@ -253,6 +253,7 @@
       <DependentUpon>Modelo.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\AxuliarHash.cs" />
+    <Compile Include="Models\NumLetras.cs" />
     <Compile Include="numcia.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
