--- a/Franquisia1.1/Franquisia1.1.csproj
+++ b/Franquisia1.1/Franquisia1.1.csproj
@@ -447,6 +447,7 @@
     <Content Include="Views\Error\ErrorPermiso.cshtml" />
     <Content Include="Views\UndAtencion\Index.cshtml" />
     <Content Include="Views\Home\Consulta.cshtml" />
+    <Content Include="Views\Home\Documento.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
