generando los .min

--- a/Franquisia1.1/Franquisia1.1.csproj
+++ b/Franquisia1.1/Franquisia1.1.csproj
@@ -430,11 +430,15 @@
     <Content Include="App_Browsers\qt.browser" />
     <None Include="Properties\PublishProfiles\NeincoSAC.pubxml" />
     <Content Include="Rotativa\wkhtmltopdf.exe" />
-    <Content Include="Scripts\js\ind.js" />
-    <Content Include="Scripts\js\fact.js" />
-    <Content Include="Scripts\js\cons.js" />
     <Content Include="Scripts\js\app.js" />
+    <Content Include="Scripts\js\cons.js" />
+    <Content Include="Scripts\js\fact.js" />
+    <Content Include="Scripts\js\ind.min.js" />
+    <Content Include="Scripts\js\fact.min.js" />
+    <Content Include="Scripts\js\cons.min.js" />
+    <Content Include="Scripts\js\app.min.js" />
     <Content Include="Scripts\js\bootstrap.js" />
+    <Content Include="Scripts\js\ind.js" />
     <Content Include="Scripts\js\jquery-latest.js" />
     <Content Include="Scripts\js\jquery-ui.js" />
     <Content Include="Scripts\js\jquery.keyboard.js" />
